Criado alguns endpoints para Tags e atualizado a documentação
